@@ -1,3 +1,8 @@
+Sat Apr  4 08:16:43 2015  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/net/http.rb (edit_path): use path which is absolute ftp url
+	  on using ftp_proxy.
+
 Fri Apr  3 11:43:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_eval.c (vm_call0_cfunc): update invoker arguments.
